objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Concerns Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>HIPAA</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Investigation</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PA Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Correspondence</fullName>
        </values>
        <values>
            <fullName>Faxed Gap Request</fullName>
        </values>
        <values>
            <fullName>Gap Exception</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Insurance Follow Up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Physician Outreach</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AE_Informed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AE Informed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accession_Created_on__c</fullName>
        <formula>Guardant_360_Sample__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accession # Created on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accession_No__c</fullName>
        <label>Accession Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_AE_Email__c</fullName>
        <label>Account AE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting Country of the account</inlineHelpText>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp; &apos; &apos; &amp;  Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Account.Territory_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Rep_Email__c</fullName>
        <formula>Contact.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory__c</fullName>
        <formula>Account.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_AE_Email_Address__c</fullName>
        <formula>PatientCase__r.Acct_AE_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct AE Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CANCEL</fullName>
                </value>
                <value>
                    <fullName>TAT ALERT</fullName>
                </value>
                <value>
                    <fullName>AMEND</fullName>
                </value>
                <value>
                    <fullName>CORRECTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualify Account</fullName>
                </value>
                <value>
                    <fullName>Qualify MD</fullName>
                </value>
                <value>
                    <fullName>Demographic Change</fullName>
                </value>
                <value>
                    <fullName>Refax Patient Report</fullName>
                </value>
                <value>
                    <fullName>Verify Information</fullName>
                </value>
                <value>
                    <fullName>Qualify Secondary Recipient</fullName>
                </value>
                <value>
                    <fullName>Provider Portal</fullName>
                </value>
                <value>
                    <fullName>Welcome Pack</fullName>
                </value>
                <value>
                    <fullName>Kit Supplies</fullName>
                </value>
                <value>
                    <fullName>Marketing Material</fullName>
                </value>
                <value>
                    <fullName>Standing Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Carrier__c</fullName>
        <description>Carrier returned by TheraPak</description>
        <label>Actual Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Shipping_Method__c</fullName>
        <label>Actual Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attestation_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attestation Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Problem_Issue__c</fullName>
        <label>Billing Problem Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>ICD10</fullName>
                </value>
                <value>
                    <fullName>Patient Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biohazard_bags__c</fullName>
        <label>Biohazard bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blank_Int_l_TRFs__c</fullName>
        <label>Blank Int&apos;l TRFs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brochure_emailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brochure emailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAPA_Initiated__c</fullName>
        <label>CAPA Initiated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAPA_Number__c</fullName>
        <label>CAPA #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Blank_TRFs_EU__c</fullName>
        <label>CE Blank TRFs (EU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Kits_Clinical_EU__c</fullName>
        <inlineHelpText>378819E - CE Guardant 360 Clinical Specimen Collection &amp; Shipping Kit</inlineHelpText>
        <label>CE Kits-Clinical (EU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Preprint_TRFs_EU__c</fullName>
        <label>CE Preprint TRFs (EU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLIA_Complaint__c</fullName>
        <label>CLIA Complaint?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLIA_Texas_LDT_Kit__c</fullName>
        <label>CLIA Texas LDT Kit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_From__c</fullName>
        <label>Call From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_To__c</fullName>
        <label>Call To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancer_Type__c</fullName>
        <label>Cancer Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF(IsClosed,
ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used to count cases. Default = 1</inlineHelpText>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_status__c</fullName>
        <label>Case status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Services_Email_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Services Email Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Upset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Upset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Basic_PrePrinted_TRF__c</fullName>
        <inlineHelpText>548069 - Preprinted 
Guardant Health Preprinted-Site Specific Clinical Trial Test Requisition Form (TST-TRF-003)</inlineHelpText>
        <label>Clinical Trial Basic Preprinted TRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Basic_Preprinted_TRF_EU__c</fullName>
        <inlineHelpText>550762E</inlineHelpText>
        <label>Clinical Trial Basic Preprinted TRF - EU</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_IUO_PrePrinted_TRF__c</fullName>
        <inlineHelpText>550007 - Preprinted
Guardant360 Preprinted Site Specific Clinical Trial Test Requisition Form (TST-TRF-012)</inlineHelpText>
        <label>Clinical Trial IUO PrePrinted TRF</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Site_Specific_TRF_CZ__c</fullName>
        <inlineHelpText>550007E-Preprinted  Guardant360 Preprinted-Site Specific Clinical Trial Test Requisition Form - CZ (TST-TRF-012 V1)</inlineHelpText>
        <label>Clinical Trial IUO PrePrinted TRF - EU</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_pay__c</fullName>
        <label>% Co-pay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collection_Information_2__c</fullName>
        <label>Collection Information #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>During infusion</fullName>
                </value>
                <value>
                    <fullName>Infusion prior to draw</fullName>
                </value>
                <value>
                    <fullName>Infusion after draw</fullName>
                </value>
                <value>
                    <fullName>Client doesn&apos;t know</fullName>
                </value>
                <value>
                    <fullName>N/A or No infusion</fullName>
                </value>
                <value>
                    <fullName>See notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_Information__c</fullName>
        <label>Collection Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Vein</fullName>
                </value>
                <value>
                    <fullName>Catheter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Patient?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Count of 1</description>
        <label>Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Billing_Price__c</fullName>
        <defaultValue>8250.00</defaultValue>
        <label>Current Billing Price</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_1st_Attempt_Made__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Attempt_Made__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_3rd_Attempt_Made__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Attempt_Made__c</fullName>
        <inlineHelpText>Date the last attempt was made (fourth or more)</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sample_Received__c</fullName>
        <description>This field is used instead of &apos;Sample Received Date&apos; because this is a formula derived from the Accession # field</description>
        <formula>Guardant_360_Sample__r.Date_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sample Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Service_blood_collection__c</fullName>
        <label>Date of Service (blood collection)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demographic_Type__c</fullName>
        <label>Demographic Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demographics__c</fullName>
        <label>Demographics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Shipping address</fullName>
                </value>
                <value>
                    <fullName>Reporting address</fullName>
                </value>
                <value>
                    <fullName>Secondary phone</fullName>
                </value>
                <value>
                    <fullName>Secondary Fax</fullName>
                </value>
                <value>
                    <fullName>NPI</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_UDI__c</fullName>
        <label>Device UDI #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Information_Form_TST_TRF_001__c</fullName>
        <inlineHelpText>547284-CS-GUA – Guardant Health Diagnosis Information Form (TST-TRF-001)</inlineHelpText>
        <label>Diagnosis Information Form (TST-TRF-001)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Other__c</fullName>
        <label>Diagnosis - Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Response_Not_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Financial Cases.</description>
        <inlineHelpText>If checked, the OOP Max calculation will IGNORE any values in the Remaining Deductible, %Copay, and Insurance OOP Max fields.</inlineHelpText>
        <label>Eligibility Response Not Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Tracking_to_Shipping_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will send an email with the tracking number to the &apos;Ship To&apos; Contact.</inlineHelpText>
        <label>Email Tracking # to &apos;Ship To&apos; Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FPL__c</fullName>
        <formula>IF(NOT(ISBLANK(PFA_Gross__c)), PFA_Gross__c / FPL_number__c, WF_Gross__c / FPL_number__c )</formula>
        <inlineHelpText>If the field &apos;PFA Gross&apos; is not blank, this is PFA Gross divided by FPL. Otherwise, it&apos;s WF Gross divided by FPL.</inlineHelpText>
        <label>% FPL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FPL_number__c</fullName>
        <formula>IF
  (NOT(ISBLANK(HHS__c)),   
   CASE(Pt_State__c,
    &apos;AK&apos;, 9780+(HHS__c*5400),
    &apos;HI&apos;, 8990+(HHS__c*4970), 
    7820+(HHS__c *4320)),
    CASE(Pt_State__c,
    &apos;AK&apos;, 15180,
    &apos;HI&apos;, 13960,
    12140))</formula>
        <inlineHelpText>Federal Poverty Level Calculation.  Different calculations based on whether pt lives in Alaska, Hawaii, or the Lower 48</inlineHelpText>
        <label>FPL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FedEx_Tracking_Link__c</fullName>
        <formula>HYPERLINK(&apos;http://www.fedex.com/Tracking?action=track&amp;tracknumbers=&apos; &amp; SUBSTITUTE(Tracking_Number__c, &apos;TR-&apos;,&apos;&apos;), &apos;FedEx Tracking URL&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedEx Tracking Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedEx_lbl_GENERIC_int_l_CLIENT_PAY__c</fullName>
        <label>FedEx lbl (GENERIC /int&apos;l) - CLIENT PAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FedEx_lbl_Site_spec_int_l_CLIENT_PAY__c</fullName>
        <description>FedEx lbl (Site spec/int&apos;l) - CLIENT PAY</description>
        <label>FedEx lbl (Site spec/int&apos;l) - CLIENT PAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_EU_lbl_GENERIC_CLIENT_PAY__c</fullName>
        <inlineHelpText>548024E - Guardant Health Generic FedEx International Airbill - Client Account</inlineHelpText>
        <label>Fed Ex EU lbl (GENERIC) - CLIENT PAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_EU_lbl_GENERIC_GH_PAY__c</fullName>
        <inlineHelpText>548027E - Guardant Health Generic FedEx International Airbill - GH Account</inlineHelpText>
        <label>Fed Ex EU lbl (GENERIC) - GH PAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_EU_lbl_Site_spec_CLIENT_PAY__c</fullName>
        <inlineHelpText>548025E - Guardant Health Site Specific FedEx International Airbill - Client Account</inlineHelpText>
        <label>Fed Ex EU lbl (Site spec) - CLIENT PAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_EU_lbl_Site_spec_GH_PAY__c</fullName>
        <inlineHelpText>548026E - Guardant Health Site Specific FedEx International Airbill - GH Account</inlineHelpText>
        <label>Fed Ex EU lbl (Site spec) - GH PAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_bags__c</fullName>
        <label>Fed Ex bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_label_GH_return_only_domestic__c</fullName>
        <inlineHelpText>546854 - Guardant Health FedEx Domestic Mon-Fri Priority Overnight Return Service Label (Return Address Only)</inlineHelpText>
        <label>Fed Ex label (GH return only/domestic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_label_GH_return_only_int_l__c</fullName>
        <inlineHelpText>546982 - Guardant Health FedEx International Preprinted Airbill (Return Address Only)</inlineHelpText>
        <label>Fed Ex lbl (GENERIC /int&apos;l) - GH PAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_label_Site_specific_domestic__c</fullName>
        <inlineHelpText>546855 - Guardant Health FedEx Domestic Mon-Fri Priority Overnight Return Service Label (Site Specific)</inlineHelpText>
        <label>Fed Ex label (Site specific/domestic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_label_Site_specific_int_l__c</fullName>
        <inlineHelpText>546983 - Guardant Health FedEx International Preprinted Airbill (Site Specific)</inlineHelpText>
        <label>Fed Ex lbl (Site spec/int&apos;l) - GH PAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FourthPlus_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fourth+ Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G360_Blood_Collection_Kit_Brazil__c</fullName>
        <inlineHelpText>379516E - International G360 Brazil IVD Kit</inlineHelpText>
        <label>Int&apos;l G360 Brazil IVD Kit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G360_Clinical_Trial_Test_Requisition_For__c</fullName>
        <inlineHelpText>553876-Preprinted Guardant360 Clinical Trial Test Requisition Form (REC-PRT-000011 R1)</inlineHelpText>
        <label>G360 Clinical Trial TRF Preprinted-TOPAZ</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GH_MP_Extra_Supplies_Kit_10__c</fullName>
        <label>GH MP Extra Supplies Kit (10)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GH_MP_Individual_Draw_Kit__c</fullName>
        <label>GH MP Individual Draw Kit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_TRFs__c</fullName>
        <label>Generic TRFs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Access_Pgm_PrePrinted_TRF__c</fullName>
        <inlineHelpText>551934-PrePrinted Guardant360 Test Requisition - Global Access Program Preprinted-Site Specific Form (FRM-PRT-000030 R1)</inlineHelpText>
        <label>Global Access Pgm PrePrinted TRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardant_360_Sample_Rec_d_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for G360 sample rec&apos;d date</description>
        <label>Guardant 360 Sample Rec&apos;d Date</label>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>Cases (sample rec&apos;d date)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guardant_360_Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accession #</label>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>Cases (Guardant 360 Sample)</relationshipLabel>
        <relationshipName>Cases_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HHS__c</fullName>
        <inlineHelpText>Household Size. Used for FPL calculations.</inlineHelpText>
        <label>HHS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HHS_household__c</fullName>
        <label>HHS (household)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD10_Issues__c</fullName>
        <label>ICD10 Issues</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unrelated ICD10</fullName>
                </value>
                <value>
                    <fullName>ICD10 code is for Secondary Dx</fullName>
                </value>
                <value>
                    <fullName>Incomplete code</fullName>
                </value>
                <value>
                    <fullName>Missing Clinical Dx/ Cancer type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICD_1__c</fullName>
        <label>ICD 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD_2__c</fullName>
        <label>ICD 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD_3__c</fullName>
        <label>ICD 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IUO_KIT_GOZILA_JAPAN__c</fullName>
        <inlineHelpText>379575-GOZILA JP</inlineHelpText>
        <label>IUO KIT GOZILA JAPAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IUO_KIT_SCRUM_JAPAN__c</fullName>
        <inlineHelpText>379575-SCRUM JP</inlineHelpText>
        <label>IUO KIT SCRUM JAPAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IUO_KIT_VISION_JAPAN__c</fullName>
        <inlineHelpText>379575-VISION JP</inlineHelpText>
        <label>IUO KIT VISION JAPAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IUO_Kit_Domestic__c</fullName>
        <inlineHelpText>379574 - G360 IUO Kit, Domestic</inlineHelpText>
        <label>IUO Kit, Domestic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IUO_Kit_Int_l_AMGEN_Australia__c</fullName>
        <inlineHelpText>380803 - Guardant360 Blood Collection Kit, IUO International Australia Amgen Clinical Trial</inlineHelpText>
        <label>IUO Kit Int&apos;l-AMGEN Australia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IUO_Kit_Int_l_AMGEN_Japan__c</fullName>
        <inlineHelpText>380802 - Guardant360 Blood Collection Kit, IUO International Japan Amgen Clinical Trial</inlineHelpText>
        <label>IUO Kit Int&apos;l-AMGEN Japan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IUO_Kit_International__c</fullName>
        <inlineHelpText>379575 - G360 IUO Kit, International</inlineHelpText>
        <label>IUO Kit, International</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>